@@ -18,7 +18,7 @@ LIBIDL_MINOR_VERSION=6
 LIBIDL_MICRO_VERSION=0
 LIBIDL_INTERFACE_AGE=0
 LIBIDL_BINARY_AGE=0
-LIBIDL_VERSION=$LIBIDL_MAJOR_VERSION.$LIBIDL_MINOR_VERSION.$LIBIDL_MICRO_VERSION
+LIBIDL_LIBRARY_VERSION=$LIBIDL_MAJOR_VERSION.$LIBIDL_MINOR_VERSION.$LIBIDL_MICRO_VERSION
 GLIB_VERSION_REQUIRED=1.1.4
 AC_DIVERT_POP()dnl
 
@@ -43,7 +43,7 @@ AM_INIT_AUTOMAKE($PACKAGE, $VERSION, no-define)
 
 AC_DEFINE_UNQUOTED(LIBIDL_INTERFACE_AGE, $LIBIDL_INTERFACE_AGE)
 AC_DEFINE_UNQUOTED(LIBIDL_BINARY_AGE, $LIBIDL_BINARY_AGE)
-AC_DEFINE_UNQUOTED(LIBIDL_VERSION, "$LIBIDL_VERSION")
+AC_DEFINE_UNQUOTED(LIBIDL_LIBRARY_VERSION, "$LIBIDL_LIBRARY_VERSION")
 
 LIBIDL_INCLUDEDIR='@GLIB_CFLAGS@ -I${includedir}'
 LIBIDL_LIBDIR='-L${libdir}'
